--- a/admin/css/styles.css
+++ b/admin/css/styles.css
@@ -1,10 +1,11 @@
-/* user image on the users list page: */
+
 
 /* ****Edit thhumb image for photos**** */
 .admin-photo-thumbnail{
   width:200px;
   border-radius:5px;
 }
+
 
 .user_image{
   width:62px;
@@ -58,3 +59,47 @@
    
    }
    
+
+   /* Photo modal style: */
+   
+.modal-dialog {
+  width: 90% !important;
+  
+  }
+  
+  .modal-body {
+  overflow: auto;
+  height: 500px !important;
+  min-height: 300px !important;
+  }
+  
+  .modal_thumbnails {
+  
+      width: 150px;
+      height: 100px !important;
+  }
+  
+  #set_user_image {
+  
+  margin:10px;
+  
+  }
+  
+  
+  #modal_sidebar {
+  
+  position: fixed !important;
+  
+  }
+
+  .dropzone{
+    border: 6px dashed #0087F7;
+    border-radius:5px;
+    background: white;
+  }
+
+  /***Login Page****/
+  #login-id label {
+    color:#FFF;
+  }
+  
